test/error/undefined_variable.imp
# Simple undefined variable error test
PROGRAM IS
    a, b
IN
    READ a;
    READ b;
    sum := a + b;
    WRITE sum;
END
